--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -23,28 +23,28 @@ jobs:
           uses: aws-actions/configure-aws-credentials@v4
           with:
             aws-region: us-east-1
-            role-to-assume: arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
+            role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/Rakbank-Githubrunner-role
 
         - name: Terraform init
-          working-directory: IAC/VPC
+          working-directory: IAC/VPC-EKS
           run: terraform init
           continue-on-error: false
 
         - name: Terraform Format Check
-          working-directory: IAC/VPC
+          working-directory: IAC/VPC-EKS
           run: terraform fmt
 
         - name: Terraform Validate
-          working-directory: IAC/VPC
+          working-directory: IAC/VPC-EKS
           run: terraform validate
           continue-on-error: false
 
         - name: Terraform Plan
-          working-directory: IAC/VPC
+          working-directory: IAC/VPC-EKS
           run: terraform plan
 
         - name: Terraform Apply
-          working-directory: IAC/VPC
+          working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
         
             
