--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -19,6 +19,19 @@ jobs:
           with:
             terraform_version: "1.7.3"
 
+        - name: Install AWS CLI
+          run: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+
+        - name: Install kubectl
+          run: |
+            curl -LO "https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kubectl"
+            chmod +x ./kubectl
+            sudo mv ./kubectl /usr/local/bin/kubectl
+          
+
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v4
           with:
@@ -46,6 +59,14 @@ jobs:
         - name: Terraform Apply
           working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
+
+        - name: Get EKS Cluster kubeconfig
+          run: |
+            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo
+
+        - name: Retrieve aws-auth ConfigMap
+          run: |
+            kubectl get configmap aws-auth -n kube-system -o yaml
         
             
           
