Deleting the configurations

--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -56,13 +56,9 @@ jobs:
           working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
 
-        - name: Get EKS Cluster kubeconfig
-          run: |
-            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo --region us-east-1 --role-arn arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
-
-        - name: Retrieve aws-auth ConfigMap
-          run: |
-            kubectl get configmap aws-auth -n kube-system -o yaml
+        - name: Terraform Delete
+          working-directory: IAC/VPC-EKS
+          run: terraform delete -auto-approve
         
             
           
