corrected delete command

--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -58,7 +58,7 @@ jobs:
 
         - name: Terraform Delete
           working-directory: IAC/VPC-EKS
-          run: terraform delete -auto-approve
+          run: terraform destroy -auto-approve
         
             
           
