--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -30,10 +30,10 @@ jobs:
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v4
           with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-region: us-east-1
-            role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/Rakbank-Githubrunner-role
-            role-session-name: GitHubActions
-
+            
         - name: Terraform init
           working-directory: IAC/VPC-EKS
           run: terraform init
@@ -56,9 +56,7 @@ jobs:
           working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
 
-        - name: Terraform Delete
-          working-directory: IAC/VPC-EKS
-          run: terraform destroy -auto-approve
+
         
             
           
