New terraform code for cluster creation

--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -30,10 +30,10 @@ jobs:
         - name: Configure AWS Credentials
           uses: aws-actions/configure-aws-credentials@v4
           with:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-region: us-east-1
-            
+            role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/Rakbank-Githubrunner-role
+            role-session-name: GitHubActions
+
         - name: Terraform init
           working-directory: IAC/VPC-EKS
           run: terraform init
@@ -56,12 +56,10 @@ jobs:
           working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
 
-        - name: Terraform Destroy
-          working-directory: IAC/VPC-EKS
-          run: terraform destroy -auto-approve
+        - name: Get EKS Cluster kubeconfig
+          run: |
+            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo --region us-east-1 --role-arn arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
 
-
-
-        
-            
-          
+        - name: Retrieve aws-auth ConfigMap
+          run: |
+            kubectl get configmap aws-auth -n kube-system -o yaml
