--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
     vpc_ci:
         name: "VPC Build"
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
         - name: Checkout code
@@ -58,7 +58,7 @@ jobs:
 
         - name: Get EKS Cluster kubeconfig
           run: |
-            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo --region us-east-1 --role-arn arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
+            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo1 --region us-east-1 --role-arn arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
 
         - name: Retrieve aws-auth ConfigMap
           run: |
