Updated Workflow with more steps

--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -25,6 +25,13 @@ jobs:
             curl -LO "https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kubectl"
             chmod +x ./kubectl
             sudo mv ./kubectl /usr/local/bin/kubectl
+
+        - name: Install Helm
+          run: |
+            curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+            chmod 700 get_helm.sh
+            ./get_helm.sh
+            sudo mv ./helm /usr/local/bin/helm
           
 
         - name: Configure AWS Credentials
@@ -63,3 +70,8 @@ jobs:
         - name: Retrieve aws-auth ConfigMap
           run: |
             kubectl get configmap aws-auth -n kube-system -o yaml
+
+        - name: Check ALB pods
+          run: |
+            kubectl get pods -n kube-system
+            kubectl get sa -n kube-system
