--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
     vpc_ci:
         name: "VPC Build"
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
 
         steps:
         - name: Checkout code
