--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -58,6 +58,10 @@ jobs:
           working-directory: IAC/VPC-EKS
           run: terraform plan
 
+        - name: Setting EKS Cluster kubeconfig
+          run: |
+            aws eks update-kubeconfig --name Rakbank-Dev-eksdemo1 --region us-east-1 --role-arn arn:aws:iam::853154372899:role/Rakbank-Githubrunner-role
+
         - name: Terraform Apply
           working-directory: IAC/VPC-EKS
           run: terraform apply -auto-approve
