--- a/.github/workflows/vpc-workflow.yml
+++ b/.github/workflows/vpc-workflow.yml
@@ -55,6 +55,10 @@ jobs:
           run: terraform validate
           continue-on-error: false
 
+        - name: Setup EKS Cluster kubeconfig
+          run: |
+              aws eks update-kubeconfig --name Rakbank-Dev-eksdemo1 --region us-east-1 --role-arn arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/Rakbank-Githubrunner-role
+
         
         - name: Terraform Plan
           working-directory: IAC/VPC-EKS
