--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,6 +1,10 @@
 name: Main Workflow
 on: workflow_dispatch
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
     build-push-image:
         uses: ./.github/workflows/build-and-push.yml
