--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,8 @@ jobs:
            - name: Setup Java
              uses: actions/setup-java@v4
              with:
-                java-version: '17' 
+                java-version: '17'
+                distribution: 'oracle' 
 
            - name: Build and run tests
              run: ${{ inputs.test_command }}
