--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,7 +17,10 @@ jobs:
              uses: actions/setup-java@v4
              with:
                 java-version: '17'
-                distribution: 'oracle' 
+                distribution: 'oracle'
+
+           - name: Set execute permissions for mvnw
+             run: chmod +x ./mvnw
 
            - name: Build and run tests
              run: ${{ inputs.test_command }}
