Corrected ingress LB name

--- a/charts/Springboot-app/values.yaml
+++ b/charts/Springboot-app/values.yaml
@@ -49,7 +49,7 @@ ingress:
   enabled: true
   className: alb
   annotations:
-    alb.ingress.kubernetes.io/load-balancer-name: Rakbanklb
+    alb.ingress.kubernetes.io/load-balancer-name: rakbanklb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
   hosts:
