--- a/charts/Springboot-app/values.yaml
+++ b/charts/Springboot-app/values.yaml
@@ -36,7 +36,7 @@ securityContext:
    capabilities:
      drop:
      - ALL
-   readOnlyRootFilesystem: true
+   readOnlyRootFilesystem: false
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
